# WordSmith

./: .gitignore  AGENTS.md  AUTOMATIC_MODE.md  LICENSE  README.md  cli.py  pyproject.toml
docs/: automatikmodus.md
docs/examples/: automatikmodus-input.json
tests/: test_agent.py  test_cli.py  test_config.py  test_llm.py  test_logging.py  test_packaging.py  test_prompts.py
wordsmith/: __init__.py  agent.py  cli.py  config.py  defaults.py  llm.py  ollama.py  prompts.py  prompts_config.json
